# figures

./: .gitignore  pyproject.toml
scripts/: join_partition_mpg.sh
src/figures/: __init__.py  partition2d.py
tests/: test_partition2d_cli.py
