[project]
name = "figures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Serrano", email = "cserrano@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
